fixed stretched out aside image

--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -176,7 +176,7 @@ aside h3{
 aside img{
     border-radius: 50%;
     margin-bottom: 30px;
-    height: auto;
+    overflow:hidden;
     border: 2px solid white;
 }
 article{
